; ModuleID = '/home/carl/AnghaBench/TDengine/src/client/src/extr_tscSQLParser.c_setMeterID.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/client/src/extr_tscSQLParser.c_setMeterID.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_13__ = type { i32 }
%struct.TYPE_14__ = type { i32 }
%struct.TYPE_15__ = type { i32 }

@.str = private unnamed_addr constant [14 x i8] c"name too long\00", align 1
@TSDB_CODE_SUCCESS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @setMeterID(%struct.TYPE_13__* %0, %struct.TYPE_14__* %1, i64 %2) #0 {
  %4 = alloca %struct.TYPE_13__*, align 8
  %5 = alloca %struct.TYPE_14__*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_15__*, align 8
  %10 = alloca i64, align 8
  %11 = alloca %struct.TYPE_14__, align 4
  store %struct.TYPE_13__* %0, %struct.TYPE_13__** %4, align 8
  store %struct.TYPE_14__* %1, %struct.TYPE_14__** %5, align 8
  store i64 %2, i64* %6, align 8
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i8** %7, align 8
  %12 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %12, i32 0, i32 0
  store i32* %13, i32** %8, align 8
  %14 = load i32*, i32** %8, align 8
  %15 = load i64, i64* %6, align 8
  %16 = call %struct.TYPE_15__* @tscGetMeterMetaInfo(i32* %14, i64 %15)
  store %struct.TYPE_15__* %16, %struct.TYPE_15__** %9, align 8
  %17 = load i64, i64* @TSDB_CODE_SUCCESS, align 8
  store i64 %17, i64* %10, align 8
  %18 = load %struct.TYPE_14__*, %struct.TYPE_14__** %5, align 8
  %19 = call i64 @hasSpecifyDB(%struct.TYPE_14__* %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %29

21:                                               ; preds = %3
  %22 = load %struct.TYPE_15__*, %struct.TYPE_15__** %9, align 8
  %23 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %26 = call i32* @getAccountId(%struct.TYPE_13__* %25)
  %27 = load %struct.TYPE_14__*, %struct.TYPE_14__** %5, align 8
  %28 = call i64 @setObjFullName(i32 %24, i32* %26, %struct.TYPE_14__* null, %struct.TYPE_14__* %27, i32* null)
  store i64 %28, i64* %10, align 8
  br label %38

29:                                               ; preds = %3
  %30 = bitcast %struct.TYPE_14__* %11 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %30, i8 0, i64 4, i1 false)
  %31 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %32 = call i32 @getCurrentDBName(%struct.TYPE_13__* %31, %struct.TYPE_14__* %11)
  %33 = load %struct.TYPE_15__*, %struct.TYPE_15__** %9, align 8
  %34 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = load %struct.TYPE_14__*, %struct.TYPE_14__** %5, align 8
  %37 = call i64 @setObjFullName(i32 %35, i32* null, %struct.TYPE_14__* %11, %struct.TYPE_14__* %36, i32* null)
  store i64 %37, i64* %10, align 8
  br label %38

38:                                               ; preds = %29, %21
  %39 = load i64, i64* %10, align 8
  %40 = load i64, i64* @TSDB_CODE_SUCCESS, align 8
  %41 = icmp ne i64 %39, %40
  br i1 %41, label %42, label %46

42:                                               ; preds = %38
  %43 = load i32*, i32** %8, align 8
  %44 = load i8*, i8** %7, align 8
  %45 = call i32 @setErrMsg(i32* %43, i8* %44)
  br label %46

46:                                               ; preds = %42, %38
  %47 = load i64, i64* %10, align 8
  ret i64 %47
}

declare dso_local %struct.TYPE_15__* @tscGetMeterMetaInfo(i32*, i64) #1

declare dso_local i64 @hasSpecifyDB(%struct.TYPE_14__*) #1

declare dso_local i64 @setObjFullName(i32, i32*, %struct.TYPE_14__*, %struct.TYPE_14__*, i32*) #1

declare dso_local i32* @getAccountId(%struct.TYPE_13__*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #2

declare dso_local i32 @getCurrentDBName(%struct.TYPE_13__*, %struct.TYPE_14__*) #1

declare dso_local i32 @setErrMsg(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
